@@ -1,6 +1,7 @@
 package com.daw.garage23.services.mapper;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 import com.daw.garage23.persistence.entities.Cita;
 import com.daw.garage23.services.dto.Citas.CitaResponseDTO;
@@ -8,17 +9,28 @@ import com.daw.garage23.services.dto.Citas.CitaResponseDTO;
 public class CitaMapper {
 
     public static CitaResponseDTO toDTO(Cita cita) {
+        if (cita == null) return null;
+
+        // Extraemos los datos con seguridad (si es null, ponemos "N/A" o vacío)
+        String matricula = (cita.getVehiculo() != null) ? cita.getVehiculo().getMatricula() : "Sin vehículo";
+        String nombreServicio = (cita.getServicio() != null) ? cita.getServicio().getNombreServicio() : "Sin servicio";
+        String estadoStr = (cita.getEstado() != null) ? cita.getEstado().name() : "PENDIENTE";
+
+        // Usamos el constructor de tu DTO
         return new CitaResponseDTO(
                 cita.getId(),
                 cita.getFecha(),
                 cita.getHora(),
-                cita.getEstado().name(),
-                cita.getVehiculo().getMatricula(),
-                cita.getServicio().getNombreServicio()
+                estadoStr,
+                matricula,
+                nombreServicio
         );
     }
 
     public static List<CitaResponseDTO> toDTOList(List<Cita> citas) {
-        return citas.stream().map(CitaMapper::toDTO).toList();
+        if (citas == null) return List.of();
+        return citas.stream()
+                    .map(CitaMapper::toDTO)
+                    .collect(Collectors.toList());
     }
 }
